--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -63,5 +63,5 @@ repos:
       rev: v2.7.1
       hooks:
           - id: prettier
-            types_or: ["markdown", "yaml"]
+            types_or: ["markdown", "yaml", "json"]
             files: '.*\.md'
