--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,18 @@ coverage = {version = ">=7.0.0,<8.0.0", extras = ["toml"]}
 coverage-badge = ">=1.1.0,<2.0.0"
 django = "==3.2.0"
 django-environ = ">=0.9.0<0.10.0"
+flake8-assertive = "==2.1.0"
+flake8-black = "==0.3.6"
+flake8-bugbear = "==22.12.6"
+flake8-builtins = "==2.0.1"
+flake8-comprehensions = "==3.10.1"
+flake8-debugger = "==4.1.2"
+flake8-import-order = "==0.18.2"
+flake8-logging-format = "==0.9.0"
+flake8-pep3101 = "==2.0.0"
+pep8-naming = "==0.13.3"
+pylint-django = "==2.5.3"
+pyproject-flake8 = "==6.0.0.post1"
 
 [requires]
 python_version = "3.10"
