--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -93,6 +93,10 @@ jobs:
                     - utils/make_status_shield:
                         status: running
                         color: lightblue
+                    - utils/rsync_file:
+                        file: ~/status.svg
+                        remote_file: ${CIRCLE_BRANCH}/${CIRCLE_JOB}.svg
+                        host: docs
             - run:
                 name: "Install test requirements"
                 command: pip install -r test_requirements_<<parameters.django>>.txt | cat; test ${PIPESTATUS[0]} -eq 0
