--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 orbs:
-    utils: arrai/utils@dev:501
+    utils: arrai/utils@1.12.0
     flake8: arrai/flake8@16.0.0
     pypi: arrai/pypi@2.0.1
     github: arrai/github@2.0.1
