build: Change description to long description and add a short description.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,8 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "django-view-manager"
-description = """\
+description = "A management command for django that provides diffs of sql views."
+long_description = """\
     A management command for django that provides a semi-automated way to have diffs of sql views.\
     The SQL of a view is stored in a file and read into a generated migration.\
     If you create and modify views in migrations, this management command can help automate the creation of
