build: Specify where to find the packages.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,9 @@ license-files = ['LICENSE']
 readme = {file = "README.md", content_type = "text/markdown"}
 version = {file = "VERSION"}
 
+[tool.setuptools.packages.find]
+where = ["django-view-manager"]
+
 [tool.flake8]
 exclude = ".git"
 extend-ignore = [
