--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,8 +33,8 @@ dynamic = ["readme", "version"]
 repository = "https://github.com/arrai-innovations/django-view-manager/"
 
 [tool.setuptools]
-packages = ["utils.management.commands"]
-package-dir = {"" = "django_view_manager"}
+packages = ["django_view_manager", "django_view_manager.utils", "django_view_manager.utils.management", "django_view_manager.utils.management.commands"]
+package-dir = {"" = "django-view-manager"}
 license-files = ['LICENSE']
 
 [tool.setuptools.dynamic]
