--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "django-view-manager"
 description = "A management command for django that provides diffs of sql views."
+readme = "README.md"
 requires-python = ">=3.7"
 license = { file = "LICENSE" }
 authors = [
@@ -27,7 +28,7 @@ classifiers = [
 dependencies = [
     "django>=3.2.0",
 ]
-dynamic = ["readme", "version"]
+dynamic = ["version"]
 
 [project.urls]
 repository = "https://github.com/arrai-innovations/django-view-manager/"
@@ -37,7 +38,6 @@ packages = ["django_view_manager", "django_view_manager.utils", "django_view_man
 license-files = ['LICENSE']
 
 [tool.setuptools.dynamic]
-readme = {file = "README.md", content_type = "text/markdown"}
 version = {file = "VERSION"}
 
 [tool.flake8]
