ci: use fixed ip ranges when running flake on main

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -356,7 +356,7 @@ workflows:
                         ignore: /.*/
     lint:
         jobs:
-            - flake8/flake8:
+            - flake8/flake8_fixed_ip:
                 name: flake8
                 flake8_cmd: pflake8
                 context: arrai-global
